# subshift

./: .gitignore  FIXES_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  README.md  TEST_SUMMARY.md  WARP.md  analyze_subtitle_accuracy.py  debug_ffmpeg.py  demo_adaptive_threshold.py  demo_complete_improvements.py  demo_enhanced_sampling.py  demo_outlier_detection.py  demo_weighted_offsets.py  modify_timestamps.py  requirements.txt  setup.cfg  test_audio.py  test_components.py  test_logger.py  timing_comparison_analysis.py
backup/: WALL-E.2008.1080p.BrRip.x264.YIFY.OFFSET_PLUS_30s.2025-09-09T20-47-42.126606.srt
docs/: architecture.md  design.md
src/subshift/: __init__.py  align.py  audio.py  backup.py  cli.py  logging.py  offset.py  sdh.py  subtitles.py  sync.py  transcribe.py  ui.py
tests/: test_cli.py  test_sdh.py
