[metadata]
name = subshift
version = 0.1.0
author = SubShift Project
author_email = dev@subshift.local
description = Subtitle synchronization utility using AI transcripts and Levenshtein matching
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mcollard0/subshift
project_urls =
Bug Tracker = https://github.com/mcollard0/subshift/issues
Documentation = https://github.com/mcollard0/subshift/blob/main/docs/
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Multimedia :: Video
    Topic :: Text Processing

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    ffmpeg-python>=0.2.0
    python-Levenshtein>=0.25.0
    openai-whisper>=20231117
    google-cloud-speech>=2.21.0
    python-dotenv>=1.0.0
    pysrt>=1.1.2
    rich>=13.7.0
    tqdm>=4.66.0
    blessed>=1.20.0
    requests>=2.31.0
    click>=8.1.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    subshift = subshift.cli:main

[options.extras_require]
dev =
    pytest>=7.4.0
    pytest-mock>=3.11.0
    pytest-cov>=4.1.0
    black>=23.0.0
    flake8>=6.0.0
    mypy>=1.0.0
